@@ -1,6 +1,8 @@
 Changes for 1.0beta9:
 
- - support for high performance DB engines like Berkeley DB
+ - user-defined parameters will overwrite already existing
+ (Alexei)
+ - fixed field order for PostgreSQL, table items (Alexei)
  - removed doc/manual.lyx (Alexei)
  - fixed resizing of simple graphs (Alexei)
  - suppor for "--with-net-snmp" and "--with-ucd-snmp" (Alexei)
